[project]
name = "templo"
version = "0.1.0"
description = "Templo — schedule polls and find a date everyone can make."
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.1",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "werkzeug>=3.1.5",
    # Imported directly by main.py (also pulled in transitively by Flask, but
    # declared explicitly so a future Flask packaging change can't break us).
    "itsdangerous>=2.2.0",
    "markupsafe>=3.0.0",
    # IANA timezone database for zoneinfo, so timezone conversion works even on
    # platforms without a system tz database (Windows, slim containers).
    "tzdata>=2025.1",
]
